# interface_sdk-js

./: .gitattributes  @ohos.arkui.perfMonitor.d.ts  @ohos.multimodalInput.IrEmitter.d.ts  @ohos.router.d.ts  @ohos.uimode.d.ts  BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  interface_config.gni  open_intent_config.json  patch  process_internal.py  remove_internal.py  remove_internal.pydeps  remove_list.json  test1128.c
.github/workflows/: sync-upstream.yml
Prtest/: Prtest.d.ts
ace_0820/: BUILD.gn
ace_0820/api/: @ohos.ability.featureAbility.d.ts  @ohos.ability.particleAbility.d.ts  @ohos.ability.wantConstant.d.ts  @ohos.accessibility.d.ts  @ohos.app.abilityManager.d.ts  @ohos.backgroundTaskManager.d.ts  @ohos.bytrace.d.ts  @ohos.commonEvent.d.ts  @ohos.data.distributedData.d.ts  @ohos.data.rdb.d.ts  @ohos.deviceInfo.d.ts  @ohos.display.d.ts  @ohos.distributedHardware.deviceManager.d.ts  @ohos.distributedSchedule.d.ts  @ohos.document.d.ts  @ohos.events.emitter.d.ts  @ohos.fileio.d.ts  @ohos.geolocation.d.ts  @ohos.hiAppEvent.d.ts  @ohos.i18n.d.ts  @ohos.mediaquery.d.ts  @ohos.multimodalInput.inputMonitor.d.ts  @ohos.net.connection.d.ts  @ohos.net.http.d.ts  @ohos.net.mdns.d.ts  @ohos.net.socket.d.ts  @ohos.net.webSocket.d.ts  @ohos.reminderAgent.d.ts  @ohos.request.d.ts  @ohos.resourceManager.d.ts  @ohos.screenshot.d.ts  @ohos.storageInfoManager.d.ts  @ohos.systemParameter.d.ts  @ohos.systemTime.d.ts  @ohos.systemTimer.d.ts  @ohos.telephony.call.d.ts  @ohos.userIAM.userAuth.d.ts  @ohos.util.d.ts  @ohos.webgl.d.ts  @ohos.webgl2.d.ts  (+6 more)
api/: .@ohos.multimedia.media.d.ts.swp  @ohos.EnterpriseAdminExtensionAbility.d.ts  @ohos.InputMethodExtensionAbility.d.ts  @ohos.InputMethodExtensionContext.d.ts  @ohos.InputMethodSubtype.d.ts  @ohos.InputmethodExtensionAbility.d.ts  @ohos.PiPWindow.d.ts  @ohos.PrintExtensionAbility.d.ts  @ohos.UiTest.d.ts  @ohos.WallpaperExtensionAbility.d.ts  @ohos.WorkSchedulerExtensionAbility.d.ts  @ohos.ability.ability.d.ts  @ohos.ability.dataUriUtils.d.ts  @ohos.ability.errorCode.d.ts  @ohos.ability.featureAbility.d.ts  @ohos.ability.particleAbility.d.ts  @ohos.ability.wantConstant.d.ts  @ohos.abilityAccessCtrl.d.ts  @ohos.accessibility.GesturePath.d.ts  @ohos.accessibility.GesturePoint.d.ts  @ohos.accessibility.config.d.ts  @ohos.accessibility.d.ts  @ohos.account.appAccount.AuthenticationExtensionAbility.d.ts  @ohos.account.appAccount.AuthorizationExtensionAbility.d.ts  @ohos.account.appAccount.AuthorizationExtensionContext.d.ts  @ohos.account.appAccount.d.ts  @ohos.account.distributedAccount.d.ts  @ohos.account.osAccount.d.ts  @ohos.advertising.AdsServiceExtensionAbility.d.ts  @ohos.advertising.AdsServiceExtensionAbility.ts  @ohos.advertising.d.ts  @ohos.ai.intelligentVoice.d.ts  @ohos.ai.mindSporeLite.d.ts  @ohos.animation.windowAnimationManager.d.ts  @ohos.animator.d.ts  @ohos.app.ability.Ability.d.ts  @ohos.app.ability.AbilityConstant.d.ts  @ohos.app.ability.AbilityContext.d.ts  @ohos.app.ability.AbilityLifecycleCallback.d.ts  @ohos.app.ability.AbilityStage.d.ts  (+627 more)
api/@internal/: global.d.ts
api/ability/: abilityAgent.d.ts  abilityResult.d.ts  assistantCode.d.ts  connectOptions.d.ts  continueAbilityOptions.d.ts  dataAbilityHelper.d.ts  dataAbilityOperation.d.ts  dataAbilityResult.d.ts  errorCode.d.ts  startAbilityParameter.d.ts  want.d.ts
api/advertising/: advertisement.d.ts
api/app/: appVersionInfo.d.ts  context.d.ts  continuationExtraParams.d.ts  continuationResult.d.ts  processInfo.d.ts
api/application/: AbilityContext.d.ts  AbilityDelegator.d.ts  AbilityMonitor.d.ts  AbilityRunningInfo.d.ts  AbilityStageContext.d.ts  AbilityStageMonitor.d.ts  AbilityStartCallback.d.ts  AbilityStateData.d.ts  AccessibilityExtensionContext.d.ts  AdsServiceExtensionContext.d.ts  AppStateData.d.ts  ApplicationContext.d.ts  ApplicationStateObserver.d.ts  AutoFillExtensionContext.d.ts  AutoFillRect.d.ts  AutoFillRequest.d.ts  AutoFillType.d.ts  AutoStartupCallback.d.ts  AutoStartupInfo.d.ts  BaseContext.d.ts  ConnectStateData.d.ts  ConnectionStateObserver.d.ts  Context.d.ts  ContinuableInfo.d.ts  ContinueCallback.d.ts  ContinueDeviceInfo.d.ts  ContinueMissionInfo.d.ts  CustomData.d.ts  DlpStateData.d.ts  DriverExtensionContext.d.ts  EmbeddableUIAbilityContext.d.ts  ErrorObserver.d.ts  EventHub.d.ts  ExtAbilityContext.d.ts  ExtensionContext.d.ts  ExtensionRunningInfo.d.ts  FormExtensionContext.d.ts  MediaControlExtensionContext.d.ts  MissionCallbacks.d.ts  MissionDeviceInfo.d.ts  (+35 more)
api/arkui/: ArkCommonModifier.d.ts  AttributeUpdater.d.ts  BuilderNode.d.ts  ComponentContent.d.ts  Content.d.ts  FrameNode.d.ts  Graphics.d.ts  NodeContent.d.ts  ParticleModifer.ts  RenderNode.d.ts  StateAttributeModifier.d.ts  XComponentNode.ts
api/bundle/: CheckPackageHasInstalledOptions.d.ts  PermissionDef.d.ts  abilityInfo.d.ts  applicaitonQuickFixInfo.d.ts  (+16 more)
arkts/: @arkts.collections.d.ets  @arkts.collections.d.ts  @arkts.utils.d.ets  test.d.ts  test.txt
build-tools/: .gitignore  code_check_plugin.rar  del_api_fromjson_plugin.js  delete_systemapi_plugin.js  deleted_api.json  device_test.py  package-lock.json  package.json
kits/: @kit.AbilityKit.d.ts  @kit.ArkGraphics.d.ts  @kit.ArkGraphics2D.d.ts  @kit.ArkGraphics3D.d.ts  @kit.ArkTS.d.ts  @kit.ArkUI.d.ts  @kit.CoreFileKit.d.ts  @kit.TestKit.d.ts
overR/: test.d.ets  test.d.ts
test/: @ohos.InputMethodExtensionContext.d.ts  aaaa.d.ts  newTestCreatePr.d.ts
(+2298 files in other folders)
