# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_copy("ets_internal_api") {
  sources = [
    "api/@internal/ets/index.d.ts",
    "api/@internal/global.d.ts",
  ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name"
  module_install_name = ""
}

ohos_copy("ets_component") {
  sources = [
    "api/@internal/component/ets/ability_component.d.ts",
    "api/@internal/component/ets/alert_dialog.d.ts",
    "api/@internal/component/ets/animator.d.ts",
    "api/@internal/component/ets/blank.d.ts",
    "api/@internal/component/ets/button.d.ts",
    "api/@internal/component/ets/calendar.d.ts",
    "api/@internal/component/ets/camera.d.ts",
    "api/@internal/component/ets/circle.d.ts",
    "api/@internal/component/ets/column.d.ts",
    "api/@internal/component/ets/column_split.d.ts",
    "api/@internal/component/ets/common.d.ts",
    "api/@internal/component/ets/counter.d.ts",
    "api/@internal/component/ets/divider.d.ts",
    "api/@internal/component/ets/ellipse.d.ts",
    "api/@internal/component/ets/flex.d.ts",
    "api/@internal/component/ets/forEach.d.ts",
    "api/@internal/component/ets/gesture.d.ts",
    "api/@internal/component/ets/grid.d.ts",
    "api/@internal/component/ets/gridItem.d.ts",
    "api/@internal/component/ets/grid_container.d.ts",
    "api/@internal/component/ets/image.d.ts",
    "api/@internal/component/ets/image_animator.d.ts",
    "api/@internal/component/ets/index.d.ts",
    "api/@internal/component/ets/list.d.ts",
    "api/@internal/component/ets/listItem.d.ts",
    "api/@internal/component/ets/navigator.d.ts",
    "api/@internal/component/ets/navigatorView.d.ts",
    "api/@internal/component/ets/pageTransition.d.ts",
    "api/@internal/component/ets/panel.d.ts",
    "api/@internal/component/ets/path.d.ts",
    "api/@internal/component/ets/qrcode.d.ts",
    "api/@internal/component/ets/rect.d.ts",
    "api/@internal/component/ets/row.d.ts",
    "api/@internal/component/ets/row_split.d.ts",
    "api/@internal/component/ets/scroll.d.ts",
    "api/@internal/component/ets/shape.d.ts",
    "api/@internal/component/ets/span.d.ts",
    "api/@internal/component/ets/stack.d.ts",
    "api/@internal/component/ets/stateManagement.d.ts",
    "api/@internal/component/ets/swiper.d.ts",
    "api/@internal/component/ets/tab_content.d.ts",
    "api/@internal/component/ets/tabs.d.ts",
    "api/@internal/component/ets/text.d.ts",
    "api/@internal/component/ets/video.d.ts",
  ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name"
  module_install_name = ""
}

ohos_copy("common_api") {
  sources = [
    "api/phone/@ohos.account.distributedaccount.d.ts",
    "api/phone/@ohos.batteryinfo.d.ts",
    "api/phone/@ohos.brightness.d.ts",
    "api/phone/@ohos.bundle_mgr.d.ts",
    "api/phone/@ohos.commonevent.d.ts",
    "api/phone/@ohos.data.distributeddata.d.ts",
    "api/phone/@ohos.data.storage.d.ts",
    "api/phone/@ohos.deviceinfo.d.ts",
    "api/phone/@ohos.distributedHardware.deviceManager.d.ts",
    "api/phone/@ohos.feature_ability.d.ts",
    "api/phone/@ohos.fileio.d.ts",
    "api/phone/@ohos.intl.d.ts",
    "api/phone/@ohos.multimedia.audio.d.ts",
    "api/phone/@ohos.multimedia.media.d.ts",
    "api/phone/@ohos.napi_ability_manager.d.ts",
    "api/phone/@ohos.resmgr.d.ts",
    "api/phone/@ohos.systemparameter.d.ts",
    "api/phone/@ohos.systemtime.d.ts",
    "api/phone/@ohos.telephony.call.d.ts",
    "api/phone/@ohos.telephony.data.d.ts",
    "api/phone/@ohos.telephony.observer.d.ts",
    "api/phone/@ohos.telephony.radio.d.ts",
    "api/phone/@ohos.telephony.sim.d.ts",
    "api/phone/@ohos.telephony.sms.d.ts",
    "api/phone/@ohos.update.d.ts",
    "api/phone/@ohos.wifi.d.ts",
    "api/phone/@ohos.window.d.ts",
    "api/phone/@system.device.d.ts",
    "api/phone/@system.prompt.d.ts",
    "api/phone/@system.router.d.ts",
    "api/phone/app",
    "api/phone/basic.d.ts",
    "api/phone/commonevent",
    "api/phone/data",
    "api/phone/@ohos.process.d.ts",
  ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name"
  module_install_name = ""
}

ohos_copy("ace_platform") {
  sources = [
    "api/config",
    "api/phone",
  ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name"
  module_install_name = ""
}

ohos_copy("form_declaration") {
  sources = [
    "api/form/action",
    "api/form/css",
    "api/form/hml",
  ]
  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
  module_source_dir = target_out_dir + "/$target_name"
  module_install_name = ""
}
